--- a/lang/en.json
+++ b/lang/en.json
@@ -2,5 +2,6 @@
     "welcome": "Welcome!",
     "sign_in": "Sign In",
     "e_mail": "E-mail",
-    "password": "Password"
+    "password": "Password",
+    "no_good": "No good!!!!!!!!!!!, {name}"
 }
