--- a/lang/es.json
+++ b/lang/es.json
@@ -3,5 +3,6 @@
     "sign_in": "Iniciar sesión",
     "e_mail": "Correo electrónico",
     "password": "Contraseña",
-    "no_good": "############# No buenooo!!!!!!!!!!!, {name}"
+    "no_good": "############# No buenooo!!!!!!!!!!!, {name}",
+    "totally_not_good": "TOTALLY not good..., {name}"
 }
