--- a/lang/en.json
+++ b/lang/en.json
@@ -3,5 +3,6 @@
     "sign_in": "Sign In",
     "e_mail": "E-mail",
     "password": "Password",
-    "no_good": "No good!!!!!!!!!!!, {name}"
+    "no_good": "No good!!!!!!!!!!!, {name}",
+    "totally_not_good": "TOTALLY not good..., {name}"
 }
