--- a/lang/en.json
+++ b/lang/en.json
@@ -3,6 +3,6 @@
     "sign_in": "Sign In",
     "e_mail": "E-mail",
     "password": "Password",
-    "no_good": "No Good. someNumber: , {name}",
-    "totally_not_good": "TOTALLY not good..., {name}"
+    "min_weight_message": "value > min, condition = false >> min: {min}, condition: {condition}",
+    "extra_weight_message": "value > 1, index > 0, myArg = weight banana >> myArg: {myArg}, index: {index}"
 }
